// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text renders correctly 1`] = `
<div
  className="ThemeProvider__Base-sc-1rk52n4-0 emGfPA"
>
  <div
    className="Text__TextElement-sc-102lho-0 glCa-di"
  >
     Something
     
     
  </div>
</div>
`;

exports[`Text renders fontStyle correctly 1`] = `
<div
  className="ThemeProvider__Base-sc-1rk52n4-0 emGfPA"
>
  <div
    className="Text__TextElement-sc-102lho-0 jBaQIo"
  >
     Something 
  </div>
</div>
`;
